# testCapstone

./: BlocklyComponent_SOURCE.js  README.md
Documentation/high-level-design/: Quantum Capstone architecture.drawio
Notes and Research/: tictactoe.html  tictactoecpu.html  tictactoecpu2.html
Notes and Research/blockly-test/blockly_hello_world/: index.html
Notes and Research/blockly-test/flask_server/: endpoint_test.sh  server.py
Notes and Research/sudoku-test/: dwave.conf  sudoku.js  sudoku.py
Notes and Research/tictactoe-research/: tictactoe.html
Project Deliverables/: Project Proposal 24-25.docx
STORAGE/: BlocklyComponent.js  TicTacToe.js  TicTacToe11_6.js  TicTacToe_OGCOPY.css
Spring Status Reports/Spring Status Reports/: Spring Week 1 Status Report.md  Spring Week 5 Status Report.md  readme.md
Status Reports/: Readme.html  Readme.md  Status Report Fall Week 01.html  Status Report Fall Week 01.md  Status Report Fall Week 03.html  Status Report Fall Week 03.md  Status Report Fall Week 05.md  Status Report Fall Week 06.md  Status Report Fall Week 09.md  Status Report Fall Week XX.md
mancala/: mancala.css  mancala.qmd
src/: Connect4.css  Connect4.js
src/flask_server/: pyproject.toml  server.py
src/flask_server/newClientServer/: TESTserver.py  WORKS_test_client.py  test_client2.py  test_input.json
src/quantum-blockly/: package-lock.json  package.json
src/quantum-blockly/src/: App.css  App.js  BlocklyComponent.css  BlocklyComponent.js  Connect4.css  Connect4.js  DisplayComponent.css  DisplayComponent.js  Mancala.css  Mancala.js  TicTacToe.css  (+17 more)
(+70 files in other folders)
