[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["Rohan Nair <rohanpnairus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Cors = "^4.0.0"
dimod = "^0.12.14"
dwave-neal = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
